# python-flask-tdd

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DATABASE.md  Dockerfile  FEATURE_PARITY_PLAN.md  IMPLEMENTATION_SUMMARY.md  MONGODB.md  Makefile  PARITY_AUDIT.md  README.md  STRUCTURE_COMPARISON.md  agent.md  app.py  conftest.py  docker-compose.yml  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  signup.py  test_email_validator_adapter.py  test_runner.py  test_signup_controller.py
data/protocols/: __init__.py  add_account_repository.py  encrypter.py  save_survey_result_repository.py  survey_repository.py
data/usecases/: __init__.py  load_account_by_token.py  load_survey_result.py  survey.py
domain/models/: account.py  survey.py  survey_result.py
domain/usecases/: __init__.py  add_account.py  add_survey.py  authentication.py  check_survey_by_id.py  load_account_by_token.py  load_answers_by_survey.py  load_survey_result.py  load_surveys.py  save_survey_result.py
errors/: __init__.py  invalid_param_error.py  missing_param_error.py  server_error.py
infra/criptography/: bcrypt_adapter.py
infra/cryptography/: __init__.py  bcrypt_adapter.py  jwt_adapter.py
infra/db/: __init__.py
infrastructure/: __init__.py  add_account_repository.py  db_add_account.py
main/: README.md  __init__.py  server.py
main/adapters/: __init__.py  flask_middleware_adapter.py  flask_route_adapter.py
main/config/: __init__.py  app.py  env.py  middlewares.py  routes.py
main/factories/: __init__.py  controllers.py  middlewares.py
main/middlewares/: __init__.py  body_parser.py
main/routes/: __init__.py  login_routes.py  survey_result_routes.py  survey_routes.py
presentation/controllers/: __init__.py  _helpers.py  add_survey_controller.py  load_survey_result_controller.py  load_surveys_controller.py  login_controller.py  save_survey_result_controller.py  signup_controller.py
presentation/errors/: __init__.py  access_denied_error.py  email_in_use_error.py  invalid_param_error.py  missing_param_error.py  server_error.py  unauthorized_error.py
presentation/helpers/: email_validator_adapter.py  http_helper.py
presentation/middlewares/: __init__.py  auth_middleware.py
presentation/protocols/: __init__.py  controller.py  email_validator.py  http.py  middleware.py  validation.py
protocols/: __init__.py  controller.py  encrypter.py  http.py  signup_protocols.py
scripts/: import_tickets_to_project.py  test-ci.sh  test-integration.sh  test-unit.sh
tests/: test_docker_compose_security.py
tests/domain/: __init__.py
tests/infrastructure/: test_db_add_account.py
tests/main/: __init__.py  test_controller_factories.py  test_env.py
tests/presentation/: __init__.py  test_auth_middleware.py
tests/utils/: test_bcrypt_adapter.py  test_email_validator_adapter.py
utils/: bcrypt_encrypter.py  email_validator_adapter.py
validation/: __init__.py  protocols.py  validators.py
(+51 files in other folders)
